--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/tcooi/boten#readme",
   "dependencies": {
     "discord.js": "^12.1.1",
+    "dotenv": "^8.2.0",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0"
   }
