--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "boten",
   "version": "1.0.0",
   "description": "",
-  "main": "bot.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bot.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
