update .env sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,5 @@
 DISCORD_TOKEN=YOUR_DISCORD_TOKEN_HERE
-HERE_KEY=YOUR_HERE_API_KEY_HERE
-POLLEN_API=POLLEN_API_URL_HERE
-SL_API=YOUR_SL_API_KEY_HERE
+APPLICATION_ID=YOUR_DISCORD_APPLICATION_ID_HERE
+HERE_API=YOUR_API_KEY_HERE
+CITY=YOUR_CITY
+SL_API=YOUR_SL_API_HERE
